# parallel-gnuplot

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  appveyor.yml
src/: build.rs  en_base.yml  main.rs
