[package]
name = "parallel-gnuplot"
version = "0.2.2"
authors = ["Cássio Kirch <cassio@kirch7.com>"]
description = "Parallel calls to GNUPlot. Calls the same GNUPlot script once for each data file block."
keywords = ["gnuplot", "parallel", "plot", "plotting"]
categories = ["science", "command-line-utilities"]
documentation = "https://github.com/kirch7/parallel-gnuplot/blob/master/README.md"
homepage = "https://github.com/kirch7/parallel-gnuplot/blob/master/README.md"
license = "MIT"
readme = "README.md"
repository = "https://github.com/kirch7/parallel-gnuplot"

[dependencies]
blockcounter = "0.3.2"
num_cpus = "1.8.0"
threadpool = "1.7.1"
clap = { version = "2.29.0", features = ["yaml"] }

[target.'cfg(not(windows))'.dependencies]
isatty = "0.1.8"

[badges]
travis-ci = { repository = "kirch7/parallel-gnuplot" }
appveyor = { repository = "kirch7/parallel-gnuplot" }

[profile.dev]
opt-level        = 0
debug            = true
lto              = false
debug-assertions = true
codegen-units    = 1

[profile.release]
opt-level        = 3
debug            = false
lto              = true
debug-assertions = false
codegen-units    = 1

[profile.test]
opt-level = 0
debug = true
lto = false
debug-assertions = true
codegen-units = 1

[profile.bench]
opt-level = 3
debug = false
lto = true
debug-assertions = false
codegen-units = 1
